# Text-to-audio-bot

./: CMakeLists.txt  README.md  telegram_tts_bot.cpp
